[tool.poetry]
name = "final-project-template"
version = "0.1.0"
description = ""
authors = ["Yahya Gilany <yahya.gilany@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
notebook = "^7.0.6"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
folium = "^0.18.0"
requests = "^2.32.3"
dash = "^2.18.1"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
